@@ -25,5 +25,6 @@ gfxboot-theme-ubuntu (0.1.0) dapper; urgency=low
     - Remove bizarre "move down one boot menu option the first time a key is
       pressed" weirdness.
     - Use subtler boot menu selection colours in place of inverse-video.
+    - Change the font to GNU unifont, from the unifont package.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Sat, 10 Dec 2005 10:48:12 +0000
